@@ -151,10 +151,10 @@ For example, if a material index is left out of the table,
 it is easier to rectify the situation using the external file.
 Once the table has been verified as correct and complete, it is imported to the database as the binary object
 \fB_DENSITIES\fR.
-To import the text file into the database, the following comand is used:
+To import the text file into the database, the following command is used:
 .IP
 mged>
-.B binary \-i u c _DENSITIES
+.B bo \-i u c _DENSITIES
 .I filename
 
 .SH GEOMETRY ERROR DETECTION
